--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,10 @@
   },
   "autoload": {
     "psr-4": {
-      "ESD\\Coroutine\\": "src/",
-      "ESD\\Coroutine\\ExampleClass\\": "exampleClass/"
+      "ESD\\": "src/"
     },
     "files": [
-      "src/Common.php"
+      "src/Coroutine/Common.php"
     ]
   },
 
